# BLine-GUI

./: LICENSE  MANIFEST.in  README.md  assets.qrc  assets_rc.py  main.py  pyproject.toml  pysidedeploy.spec  requirements.txt
.github/workflows/: build.yml  ci.yml  package.yml  release.yml
example_project/paths/: example_a.json
models/: __init__.py  path_model.py  simulation.py
packaging/: bline.desktop  bline.spec  build-appimage.sh  build-windows.bat  build-windows.ps1  create-installer.ps1  create-portable.ps1  installer.iss  pyi_rth_stderr.py
scripts/: package_app.py
ui/: config_dialog.py  main_window.py  qt_compat.py
ui/canvas/: constants.py  view.py
ui/canvas/components/: transport.py
ui/canvas/items/: elements.py  sim.py
ui/main_window/: autosave.py  events.py  menus.py  window.py
ui/sidebar/: sidebar.py
ui/sidebar/components/: constraint_manager.py  element_manager.py  property_editor.py
ui/sidebar/utils/: constants.py  element_helpers.py
ui/sidebar/widgets/: custom_list.py  no_wheel_spinbox.py  popup_combobox.py  range_slider.py
utils/: project_io.py  project_manager.py
