[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bline"
version = "0.2.0"
description = "A PySide6 GUI for planning and simulating FRC robot paths."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "FRC PTP Maintainers" }]
dependencies = [
    "PySide6>=6.6",
    "imageio>=2.0",
    "pyshortcuts>=1.9",
]

[project.scripts]
bline = "main:main"

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "mypy>=1.11.0",
    "pytest>=8.2.0",
    "ruff>=0.6.5",
]

[tool.setuptools]
packages = ["models", "ui", "ui.canvas", "ui.canvas.items", "ui.canvas.components", "ui.main_window", "ui.resources", "ui.sidebar", "ui.sidebar.components", "ui.sidebar.mixins", "ui.sidebar.utils", "ui.sidebar.widgets", "utils"]
py-modules = ["main", "assets_rc"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.png", "*.json"]

[tool.setuptools.data-files]
"bline_assets" = ["assets/*.png"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]
extend-exclude = ["assets_rc.py"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
files = ["models", "utils", "scripts", "tests"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
